[#1482] feat(auth): add role summary API (#1483)
### What changes were proposed in this pull request?

- Remove role owners from the authorization overview response.
- Add `GET /web/security/metalakes/{metalake}/roles` to list all visible
roles, including roles without members.
- Return role ownership, creation time, direct user/group counts, and
total assignment count in role summaries.
- Add `createTime` and `assignCount` to role privilege entries returned
by the authorization overview and metadata-object role APIs.
- Replace the single-role assignment API with `PUT
/web/security/metalakes/{metalake}/roles/assignments`, which atomically
and idempotently assigns multiple roles to multiple users and groups.
- Update DTOs, persistence queries, OpenAPI documentation, and unit
tests for these API changes.

### Why are the changes needed?

The authorization APIs need complete role metadata for UI display and an
efficient way to assign several roles to several principals in one
request. Combining these related changes in one pull request also avoids
repeating the long CI cycle across multiple pull requests.

Fix: #1482

### Does this PR introduce _any_ user-facing change?

Yes.

- Role entries expose `createTime` and direct assignment counts.
- The new role summary API returns `role`, `owner`, `createTime`,
`userCount`, `groupCount`, and `assignCount`.
- Role assignment now accepts `roles`, `users`, and `groups` collections
at `/roles/assignments` instead of assigning one role through
`/roles/{role}/assignments`.
- Role entries in the authorization overview no longer contain `owner`.

### How was this patch tested?

- Ran Spotless formatting and checks.
- Ran focused unit tests for the common-extension DTOs, core-extension
authorization and persistence logic, and datastrato-server REST
operations.
- Ran the H2 role-assignment transaction tests.
- Built and validated the standard and enterprise OpenAPI documentation.